--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,30 @@
-# LLM Keys
-OPENAI_API_KEY=sk-...
-GOOGLE_API_KEY=AIza...
+# ========================================
+# LLM Provider Configuration
+# ========================================
+# Choose LLM provider: openai, google, glm
+LLM_PROVIDER=openai
 
+# OpenAI Configuration
+OPENAI_API_KEY=sk-...
+OPENAI_MODEL=gpt-4o
+
+# Google Gemini Configuration
+GOOGLE_API_KEY=AIza...
+GOOGLE_MODEL=gemini-1.5-pro
+
+# GLM (Zhipu AI) Configuration
+GLM_API_KEY=your-glm-api-key
+GLM_MODEL=glm-4
+GLM_BASE_URL=https://open.bigmodel.cn/api/paas/v4/
+
+# ========================================
 # Supabase Configuration
+# ========================================
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_KEY=eyJ...
 
+# ========================================
 # Optional: LangSmith Tracing
+# ========================================
 LANGCHAIN_TRACING_V2=true
 LANGCHAIN_API_KEY=lsv2_...
