--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi
 uvicorn
 python-dotenv
 langchain
+langchain-community
 langgraph
 langchain-openai
 langchain-google-genai
@@ -12,3 +13,4 @@ python-docx
 beautifulsoup4
 websockets
 tiktoken
+
